<resources>
    <string name="app_name">FakeStoreAPI</string>
    <string name="user_name">user name</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="log_out">Log out</string>
    <string name="from_men_s_clothing">from men\'s clothing</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="go_to_cart">go to cart</string>
    <string name="price">price: </string>
    <string name="dollar">$</string>
    <string name="ratings"> ratings</string>
    <string name="items"> items</string>
    <string name="profile">profile</string>
    <string name="categories">categories</string>
    <string name="cart">cart</string>
    <string name="home">home</string>


</resources>