<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.fakestoreapi.view.product_details.ProductDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imageview_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:src="@drawable/ic_back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textview_category_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_x_medium"
                android:fontFamily="@font/itim_regular"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="@dimen/body_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageview_back_button"
                app:layout_constraintTop_toTopOf="@+id/imageview_back_button"
                tools:text="@string/from_men_s_clothing" />

            <ImageView
                android:id="@+id/imageview_product_image"
                android:layout_width="0dp"
                android:layout_height="280dp"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_category_title"
                tools:src="@drawable/bag" />

            <TextView
                android:id="@+id/textview_product_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/margin_huge"
                android:fontFamily="@font/itim_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/title_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageview_product_image"
                tools:text="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops" />

            <TextView
                android:id="@+id/textview_product_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/itim_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/body_small"
                app:layout_constraintEnd_toEndOf="@id/textview_product_title"
                app:layout_constraintStart_toStartOf="@+id/textview_product_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_product_title"
                tools:text="Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday" />

            <TextView
                android:id="@+id/textview_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/itim_regular"
                android:textColor="@color/khamry"
                android:textSize="@dimen/body_medium"
                app:layout_constraintStart_toStartOf="@+id/textview_product_description"
                app:layout_constraintTop_toBottomOf="@+id/textview_product_description"
                tools:text="price: 109.95 $" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/error_image_size"
                android:layout_height="@dimen/error_image_size"
                android:src="@drawable/error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:showWhenError="@{viewmodel.fragmentState}"
                tools:visibility="gone" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/khamry"
                android:indeterminateTintMode="src_atop"
                android:progressTint="@color/khamry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:showWhenLoading="@{viewmodel.fragmentState}"
                tools:visibility="gone" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:theme="@style/RatingBar"
                android:isIndicator="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_product_price" />

            <TextView
                android:id="@+id/textview_ratings_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_very_small"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                tools:text="146 ratings" />


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/button_background"
                android:drawableEnd="@drawable/ic_cart"
                android:drawablePadding="20dp"
                android:fontFamily="@font/itim_regular"
                android:gravity="center"
                android:paddingHorizontal="30dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/textview_ratings_counter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:fontFamily="@font/itim_regular"
                android:text="@string/go_to_cart"
                android:textColor="@color/black"
                android:textSize="@dimen/body_small"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>